--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^5.3.2",
     "fs-extra": "^0.24.0",
     "glob": "^5.0.15",
+    "html-loader": "^0.3.0",
     "html-minifier": "^0.8.0",
     "minimatch": "^3.0.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
