--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.21.0",
     "fs-extra": "^0.24.0",
     "glob": "^5.0.15",
     "html-loader": "^0.3.0",
     "html-minifier": "^0.8.0",
     "minimatch": "^3.0.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
+    "node-sass": "^3.3.3",
+    "sass-loader": "^3.0.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.2"
   },
   "dependencies": {
