--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.21.0",
+    "file-loader": "^0.8.4",
     "fs-extra": "^0.24.0",
     "glob": "^5.0.15",
     "html-loader": "^0.3.0",
@@ -33,7 +34,8 @@
     "node-sass": "^3.3.3",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.2"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
     "angular": "^1.4.7",
