--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.21.0",
+    "eslint": "^1.9.0",
     "file-loader": "^0.8.4",
     "fs-extra": "^0.24.0",
     "glob": "^5.0.15",
@@ -39,6 +40,8 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
-    "angular-ui-router": "^0.2.15"
+    "angular-ui-router": "^0.2.15",
+    "bootstrap": "git://github.com/twbs/bootstrap.git#v4-dev",
+    "monoscope": "^0.2.5"
   }
 }
