--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "bower-webpack-plugin": "^0.1.9",
     "css-loader": "^0.21.0",
     "eslint": "^1.9.0",
     "file-loader": "^0.8.4",
@@ -35,7 +36,7 @@
     "node-sass": "^3.3.3",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.2",
+    "webpack": "^1.12.6",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
