Webpack Bower configuration.

--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "angular-resource": "~1.4.7",
     "angular": "~1.4.7",
     "angular-ui-router": "~0.2.15"
+  },
+  "devDependencies": {
+    "bootstrap": "~3.3.5"
   }
 }
