--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,10 @@
     "tests"
   ],
   "dependencies": {
-    "angular-animate": "~1.4.7",
-    "angular-resource": "~1.4.7",
-    "angular": "~1.4.7",
+    "angular-animate": "~1.3.16",
+    "angular-resource": "~1.3.16",
+    "angular": "~1.3.16",
+    "angular-mocks": "~1.3.16",
     "angular-ui-router": "~0.2.15"
   },
   "devDependencies": {
