--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Angular Starter Project for the monoscope-angular shortcut toolkit.",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "webpack-dev-server --display-errors-details --hot --inline --config webpack.config.test.js",
     "dev": "monoscope=true webpack-dev-server --hot --inline",
     "prod": "prod=true webpack"
   },
@@ -22,7 +22,10 @@
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "babel-preset-es2015": "^6.6.0",
     "bower-webpack-plugin": "^0.1.9",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.2.0",
     "css-loader": "^0.21.0",
     "eslint": "^1.9.0",
     "file-loader": "^0.8.4",
@@ -30,11 +33,21 @@
     "glob": "^5.0.15",
     "html-loader": "^0.3.0",
     "html-minifier": "^0.8.0",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
+    "karma-mocha": "^0.2.2",
+    "karma-sinon": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "minimatch": "^3.0.0",
+    "mocha": "^2.4.5",
+    "mocha-loader": "^0.7.1",
     "monoscope-angular": "^1.0.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "node-sass": "^3.3.3",
     "sass-loader": "^3.0.0",
+    "sinon": "^1.17.3",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.6",
     "webpack-dev-server": "^1.12.1"
