--- a/package.json
+++ b/package.json
@@ -31,17 +31,23 @@
     "glob": "^5.0.15",
     "html-loader": "^0.3.0",
     "html-minifier": "^0.8.0",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
+    "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.24",
     "karma-webpack": "^1.7.0",
     "minimatch": "^3.0.0",
     "monoscope-angular": "^1.0.0",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "node-sass": "^3.3.3",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.6",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.6",
